2 Mar 2005: Wouter
	- Added nsd-checkconf.8 to makedist.sh replace list.
	- DIFF file format updated.

1 Mar 2005: Wouter
	- Nicer text in nsd.8.
	- nsd.c prettier code in option handling.
	- zonec.c code prettier in option handling, also chdir bug removed.
	  zonec uses the zone definitions in the config file.
	  updated zonec.8 and usage().
	- nsd also chdirs to the zonedir, otherwise nsd and zonec would
	  try to read the database: file from different directories.
	  .(it does the chdir before the chroot call.)
	- new calling syntax for zonec and nsd, because of new config file.
	- options added acl acceptance tests (no tsig yet).
	- added unit test for options.c - for acl tests.
	- zonec removed unused vars, nsd-checkconf print arguments.
	- nsd-checkconf.8 manual page.

28 Feb 2005: Wouter
	- checked in options.h and config parser code.
	- also nsd-checkconf that will test a config file 
	  .(and optionally show what was read).
	- default identity has a spelling error.
	- Small fix (typo in example) to config manual page.
	- Added ; to configparser.y to please bison 1.75 on bsd.
	- Will check for blocked addresses in outgoing acls. Also ranges.
	- Check configuration tpkg test added. Uses checkconf.
	- checkconf does extra semantic tests. i.e. enable absent features.
	- tcpcount and servercount cannot be negative.
	- updated nsd.conf.5 manpage for @port syntax.
	- changed config parser: allows empty server: part (defaults).
	- made nsd.conf.sample file.
	- put option to configure for CONFIG_FILE nsd.conf location.
	  Note. Already nsdc.conf exists. Both exist now.
	- updated makefile dependencies (gcc -MM).
	- getopt optstring in nsd-checkconf updated ("v" only option).
	- Added config .o files to nsd and zonec. This compiles.
	- Added commandline option -c configfile to zonec and nsd.
	  configure defaults < configfile < commandline options in importance.

24 Feb 2005: Wouter
	- Added compute_crc in util.h and unit tests for it.