@@ -1,6 +1,10 @@
 2 Mar 2005: Wouter
 	- Added nsd-checkconf.8 to makedist.sh replace list.
 	- DIFF file format updated.
+	- removed tsigkey->server value, it was read in, but unused.
+	- new function to add config file keys to tsig.
+	- nsd-checkconf checks parsing of keys. 
+	- Updated sample key file with valid keys.
 
 1 Mar 2005: Wouter
 	- Nicer text in nsd.8.
